--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -19,19 +19,12 @@ jobs:
           sparse-checkout: |
              .github/workflows/oracle-db-password-rotation-schedule.json
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion || 'main' }}
-#          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Filter Password Rotation Schedule
         id: filter-password-rotation-schedule
         run: |
-             echo "🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆🔆😛🔆"
-             echo "CS: ${{ github.event.schedule }}"
-             ls -l operations/.github/workflows/oracle-db-password-rotation-schedule.json
-             echo "-------"
-             cat operations/.github/workflows/oracle-db-password-rotation-schedule.json
-             echo "-------"
              SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment"}]' operations/.github/workflows/oracle-db-password-rotation-schedule.json | jq '{include: .}')
              echo "scheduling_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
 
@@ -66,7 +59,6 @@ jobs:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-password-rotation.yml@main
     with:
       TargetEnvironment: ${{ matrix.TargetEnvironment }}
-
 
   # If the GHA fails during calculation of the scheduling matrix we will not have configured
   # any specific environment to use yet, so we default to running the failure notification from
