--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -5,6 +5,7 @@ on:
     - cron: '00 14 * * TUE'
     - cron: '00 10 * * THU'
     - cron: '00 14 * * THU'
+  workflow_dispatch:
 
 jobs:
   prepare-run-matrix:
