--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Filter Password Rotation Schedule
         id: filter-password-rotation-schedule
         run: |
+             set -e
              SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment"}]' operations/.github/workflows/oracle-db-password-rotation-schedule.json | jq '{include: .}')
              echo "scheduling_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
 
