Add permission to write id token

--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -65,14 +65,16 @@ jobs:
 
   # If the GHA fails during calculation of the scheduling matrix we will not have configured
   # any specific environment to use yet, so we default to running the failure notification from
-  # the development environment (this is arbitrary)
+  # the development OEM environment (this is arbitrary)
   setup-notification-failure-slack:
     if: failure()
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     needs: [prepare-run-matrix]
-    environment: "delius-core-dev-preapproved"
+    environment: "hmpps-oem-development-preapproved"
+    permissions:
+       id-token: write
     steps:
 
       - name: Checkout Local Repo to get Composite Action
