--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -89,5 +89,4 @@ jobs:
           Emoji: ":github-red:"
           TextHeader: "Password Rotation Job Scheduling Failure"
           TextBody: ":cross-red: Password rotation job could not be scheduled"
-          TargetHost: "GHA-Runner"
-          TargetEnvironment: "GHA-Top-Level"
+          TargetEnvironment: "GHA(Scheduling)"
