Provide Job Name

--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -90,3 +90,4 @@ jobs:
           TextHeader: "Password Rotation Job Scheduling Failure"
           TextBody: ":cross-red: Password rotation job could not be scheduled"
           TargetEnvironment: "GHA(Scheduling)"
+          JobName: "prepare-run-matrix"
