Password Rotation Not Running (#680)
* Remove invalid characters from JSON

* Allow branches for schedule

* Send Slack Message on Failure

* Remove debug

* Revert JSON change to force failure mode

* For testing

* Exit on error

* Fail if pipeline fails

* Add permission to write id token

* Set an Environment

* Handle Missing Hostname

* Provide Job Name

* Remove Workflow Dispatch Event

--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Filter Password Rotation Schedule
         id: filter-password-rotation-schedule
         run: |
+             set -e
+             set -o pipefail
              SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment"}]' operations/.github/workflows/oracle-db-password-rotation-schedule.json | jq '{include: .}')
              echo "scheduling_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
 
@@ -59,3 +61,32 @@ jobs:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-password-rotation.yml@main
     with:
       TargetEnvironment: ${{ matrix.TargetEnvironment }}
+
+  # If the GHA fails during calculation of the scheduling matrix we will not have configured
+  # any specific environment to use yet, so we default to running the failure notification from
+  # the development OEM environment (this is arbitrary)
+  setup-notification-failure-slack:
+    if: failure()
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
+    needs: [prepare-run-matrix]
+    environment: "hmpps-oem-development-preapproved"
+    permissions:
+       id-token: write
+    steps:
+
+      - name: Checkout Local Repo to get Composite Action
+        uses: actions/checkout@v5
+
+      - name: Send Slack Failure Notification
+        id: foreground_slack_notification
+        uses: ./.github/actions/send-slack-notification
+        env:
+            AWS_ACCOUNT_ID: "${{ vars.AWS_ACCOUNT_ID }}"
+        with:
+          Emoji: ":github-red:"
+          TextHeader: "Password Rotation Job Scheduling Failure"
+          TextBody: ":cross-red: Password rotation job could not be scheduled"
+          TargetEnvironment: "GHA(Scheduling)"
+          JobName: "prepare-run-matrix"
