Fix bug in user creation

--- a/playbooks/delius_users/playbook.yml
+++ b/playbooks/delius_users/playbook.yml
@@ -470,7 +470,7 @@
 
 - name: User passwords output
   debug:
-    msg: "{{ item.stdout }}"
+    msg: "{{ item.stdout | default('') }}"
   loop: "{{ plsql.results }}"
   loop_control:
     label: "{{ item.item.key }}"
