--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -63,6 +63,13 @@ on:
           - "dsd_primarydb"
           - "dsd_standbydb1"
           - "dsd_dbs"
+      CreateGoldImage:
+        description: "Create a Gold Image for the Agent?"
+        type: choice
+        default: "no"
+        options:
+          - "yes"
+          - "no"
       GoldImageName:
         description: "OPTIONAL [Gold Image name].  If not specified then default from the oracle-oem-agent-setup role will be used."
         type: string
@@ -294,5 +301,6 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target=${{needs.build_target_names.outputs.TargetHost}} \
+          -e create_gold_image=${{ github.event.inputs.CreateGoldImage }} \
           -e goldimagename=${{ github.event.inputs.GoldImageName }} ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
         
