--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -243,7 +243,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags agent_ru_upgrade,oem_agent_gold_image 
+      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags agent_ru_upgrade
       inventory: inventory/ansible
     continue-on-error: false
     steps:
@@ -299,8 +299,13 @@ jobs:
       - name: Start OEM Agent Update
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          if [[ "${{ github.event.inputs.CreateGoldImage }}" == "yes" ]]
+          then
+             # Only build a new Gold Image if requested
+             GOLD_IMAGE_TAG="--tags oem_agent_gold_image"
+          fi
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          ${GOLD_IMAGE_TAG} \
           -e target=${{needs.build_target_names.outputs.TargetHost}} \
-          -e create_gold_image=${{ github.event.inputs.CreateGoldImage }} \
           -e goldimagename=${{ github.event.inputs.GoldImageName }} ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
         
