--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -63,6 +63,13 @@ on:
           - "dsd_primarydb"
           - "dsd_standbydb1"
           - "dsd_dbs"
+      CreateGoldImage:
+        description: "Create a Gold Image for the Agent?"
+        type: choice
+        default: "no"
+        options:
+          - "yes"
+          - "no"
       GoldImageName:
         description: "OPTIONAL [Gold Image name].  If not specified then default from the oracle-oem-agent-setup role will be used."
         type: string
@@ -236,7 +243,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags agent_ru_upgrade,oem_agent_gold_image 
+      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags agent_ru_upgrade
       inventory: inventory/ansible
     continue-on-error: false
     steps:
@@ -292,7 +299,13 @@ jobs:
       - name: Start OEM Agent Update
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          if [ "${{ github.event.inputs.CreateGoldImage }}" == "yes" ]
+          then
+             # Only build a new Gold Image if requested
+             GOLD_IMAGE_TAG="--tags oem_agent_gold_image"
+          fi
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          ${GOLD_IMAGE_TAG} \
           -e target=${{needs.build_target_names.outputs.TargetHost}} \
           -e goldimagename=${{ github.event.inputs.GoldImageName }} ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
         
