--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -147,6 +147,9 @@ jobs:
 
       - name: Start OEM Agent Setup
         run: | 
+            echo "WHAT IS HERE"
+            find $PWD/operations -ls
+            echo "THAT IS"
             export ANSIBLE_CONFIG=$ansible_config
             ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
             ln -s $PWD/roles/ansible/roles $PWD/operations/roles/ansible/roles/oracle-oem-blackout
