--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -115,6 +115,7 @@ jobs:
           sparse-checkout: |
                ansible/roles/oracle-oem-blackout
                ansible/roles/oracle-oem-agent-setup
+               ansible/roles/oracle-oms-setup
                ansible/roles/get-ec2-facts
                ansible/roles/secretsmanager-passwords
                ansible/roles/get-modernisation-platform-facts
@@ -150,4 +151,5 @@ jobs:
             export ANSIBLE_CONFIG=$ansible_config
             ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
             ln -s $PWD/roles/ansible/roles $PWD/operations/ansible/roles/oracle-oem-blackout
+            ln -s $PWD/roles/ansible/roles $PWD/operations/ansible/roles/oracle-oms-setup
             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_name.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput }}
