--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -80,7 +80,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup
+      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags all,oem_agent_target_promote,update_target_properties
       inventory: inventory/ansible
     continue-on-error: false
     steps:
@@ -115,6 +115,7 @@ jobs:
           sparse-checkout: |
                ansible/roles/oracle-oem-blackout
                ansible/roles/oracle-oem-agent-setup
+               ansible/roles/oracle-oms-setup
                ansible/roles/get-ec2-facts
                ansible/roles/secretsmanager-passwords
                ansible/roles/get-modernisation-platform-facts
@@ -149,5 +150,6 @@ jobs:
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
             ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
-            ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oem_blackout/roles
+            ln -s $PWD/roles/ansible/roles $PWD/operations/ansible/roles/oracle-oem-blackout
+            ln -s $PWD/roles/ansible/roles $PWD/operations/ansible/roles/oracle-oms-setup
             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_name.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput }}
