--- a/.github/workflows/oracle-db-delete-dbids-not-in-use-schedule.yml
+++ b/.github/workflows/oracle-db-delete-dbids-not-in-use-schedule.yml
@@ -59,3 +59,32 @@ jobs:
     with:
       TargetEnvironment: ${{ matrix.TargetEnvironment }}
       TargetHost: ${{ matrix.TargetHost }}
+
+  # If the GHA fails during calculation of the scheduling matrix we will not have configured
+  # any specific environment to use yet, so we default to running the failure notification from
+  # the development OEM environment (this is arbitrary)
+  setup-notification-failure-slack:
+    if: failure()
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
+    needs: [prepare-run-matrix]
+    environment: "hmpps-oem-development-preapproved"
+    permissions:
+       id-token: write
+    steps:
+
+      - name: Checkout Local Repo to get Composite Action
+        uses: actions/checkout@v5
+
+      - name: Send Slack Failure Notification
+        id: foreground_slack_notification
+        uses: ./.github/actions/send-slack-notification
+        env:
+            AWS_ACCOUNT_ID: "${{ vars.AWS_ACCOUNT_ID }}"
+        with:
+          Emoji: ":github-red:"
+          TextHeader: "Obsolete Backup Deletion Job Scheduling Failure"
+          TextBody: ":cross-red: Obsolete backup deletion job could not be scheduled"
+          TargetEnvironment: "GHA(Scheduling)"
+          JobName: "prepare-run-matrix"
