--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
@@ -1,7 +1,13 @@
 # ASM SYS password is the same as the SYS password for the associated database
-- name: Set ASM Passwords in ASM Instance
+- name: Set SYS Password in ASM Instance
   script: set_asm_password.sh
   environment:
     SECRET_NAME: "{{ secret_name }}"
-    SYS_USERNAME: "{{ 'sys' if (oem_db_name is not defined ) else 'ASMSYS' }}"
+    ASM_USERNAME: "{{ 'sys' if (oem_db_name is not defined ) else 'ASMSYS' }}"
+
+# Note that the username is case sensitive in the Secrets Manager (upper case for OEM databases)
+- name: Set ASMSNMP Passwords in ASM Instance
+  script: set_asm_password.sh
+  environment:
+    SECRET_NAME: "{{ secret_name }}"
     ASM_USERNAME: "{{ 'asmsnmp' if (oem_db_name is not defined ) else 'ASMSNMP' }}"
