--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/set_dbsnmp_profile.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/set_dbsnmp_profile.yml
@@ -1,6 +1,6 @@
 - block:
     - name: Check if DBSNMP Profile Exists
-      script: get_monitoring_profile.sh
+      script: get_database_profile.sh
       register: get_dbsnmp_monitoring_profile
       changed_when: false
       environment:
@@ -15,15 +15,20 @@
         PROFILE_USER: "DBSNMP"
 
     - name: Create DBSNMP Profile
-      script: create_dbsnmp_monitoring_profile.sh
+      script: create_database_profile.sh
       register: out
       when: get_dbsnmp_monitoring_profile.stdout_lines[-1] != 'DBSNMP_MONITORING_PROFILE'
+      environment:
+          PROFILE_NAME: "DBSNMP_MONITORING_PROFILE"
 
     - name: Customize DBSNMP Profile
-      script: alter_dbsnmp_monitoring_profile.sh
+      script: alter_database_profile.sh
+      environment:
+          PROFILE_NAME: "DBSNMP_MONITORING_PROFILE"
+          IDLE_TIME: 30
 
     - name: Set DBSNMP Profile
-      script: set_monitoring_profile.sh
+      script: set_database_profile.sh
       when: get_dbsnmp_current_profile.stdout_lines[-1] != 'DBSNMP_MONITORING_PROFILE'
       environment:
         PROFILE_USER: "DBSNMP"
