Update DMS DB Link password during rotation

--- a/playbooks/oracle_dms_setup/dms_setup/vars/delius_audited_interaction.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/vars/delius_audited_interaction.yml
@@ -86,6 +86,7 @@ objects:
 system_privileges:
   - name: CREATE SESSION
   - name: CREATE TABLE
+  - name: ALTER DATABASE LINK
 
 dms_tables:
   - name: AUDITED_INTERACTION
