Enable Rotation of DELIUS_AUDIT_DMS_POOL password for DMS Endpoints (#694)
* Initial Version

* Look in correct secret for delius_audit_dms_pool password

* Commit changes made by code formatters

* Update DMS DB Link password during rotation

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -82,6 +82,12 @@
       when:
         - database_primary_sid is defined
 
+    - name: Set Profile for DELIUS_AUDIT_DMS_POOL on DELIUS Primary databases only
+      include_tasks: set_audit_replication_profile.yml
+      when:
+        - database_primary_sid is defined
+        - database_type == 'delius'
+
     # We require a special profile for SYS which prevents it getting locked out if an invalid password
     # is used as we must always be able to connect to the SYS account.
     # This profile allows for a high number of failures before locking - this provides time for the DBA
@@ -142,15 +148,38 @@
       when:
         - database_primary_sid is defined
 
-    # Change DELIUS_APP_SCRIPTS password for Delius
-    - name: Set Password for DELIUS_APP_SCRIPTS
+    # The same ASMSNMP password is used on primary and standby instances, so we initially create the new
+    # password on primary only and then apply to all instances.
+    # (Do not attempt to change password for engineering hosts unless we are an engineering environment)
+    - name: Generate ASMSNMP Passwords
+      include_tasks: generate_asm_password.yml
+      vars:
+        db_type: "{{ database_type }}"
+      when:
+        - database_primary_sid is defined
+
+    - name: Rotate ASMSNMP Passwords
+      include_tasks: rotate_asm_passwords.yml
+      vars:
+        db_type: "{{ database_type }}"
+
+    - name: Set Password for DELIUS_APP_SCRIPTS and DELIUS_AUDIT_DMS_POOL
       include_tasks: rotate_application_passwords.yml
       vars:
         db_type: "{{ database_type }}"
-        db_username: "delius_app_scripts"
+        db_username: "{{ username }}"
       when:
         - database_primary_sid is defined
         - database_type == 'delius'
+      loop: ["delius_app_scripts", "delius_audit_dms_pool"]
+      loop_control:
+        loop_var: username
+
+    # One of the passwords rotated in the previous task was for the DMS endpoints for
+    # audit replication.  Update the endpoints with the new password
+    - name: Update DMS Endpoints
+      include_tasks: update_dms_endpoints.yml
+      when: database_type == 'delius'
 
     # Update Alfresco Wallet Password for Delius databases (it uses the Delius database SYSTEM password)
     - name: Update Alfresco Wallet Password
@@ -186,21 +215,6 @@
         db_username: "dbsnmp"
       when:
         - database_primary_sid is defined
-
-    # The same ASMSNMP password is used on primary and standby instances, so we initially create the new
-    # password on primary only and then apply to all instances.
-    # (Do not attempt to change password for engineering hosts unless we are an engineering environment)
-    - name: Generate ASMSNMP Passwords
-      include_tasks: generate_asm_password.yml
-      vars:
-        db_type: "{{ database_type }}"
-      when:
-        - database_primary_sid is defined
-
-    - name: Rotate ASMSNMP Passwords
-      include_tasks: rotate_asm_passwords.yml
-      vars:
-        db_type: "{{ database_type }}"
 
     - name: Rotate Oracle Password
       include_tasks: rotate_oracle_password.yml
