--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
@@ -40,5 +40,6 @@
         SECRET_NAME: "{{ secret_application_name }}"
       vars:
         ansible_aws_ssm_timeout: 60
+      no_log: true
 
   when: db_user_exists
