Handle ASM Secret Key does not match Username for non-Delius DBs

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
@@ -3,11 +3,13 @@
   script: set_asm_password.sh
   environment:
     SECRET_NAME: "{{ secret_name }}"
-    ASM_USERNAME: "{{ 'sys' if (oem_db_name is not defined ) else 'ASMSYS' }}"
+    ASM_USERNAME: "sys"
+    ASM_USERNAME_SECRET_KEY: "{{ 'sys' if (oem_db_name is not defined ) else 'ASMSYS' }}"
 
 # Note that the username is case sensitive in the Secrets Manager (upper case for OEM databases)
 - name: Set ASMSNMP Passwords in ASM Instance
   script: set_asm_password.sh
   environment:
     SECRET_NAME: "{{ secret_name }}"
-    ASM_USERNAME: "{{ 'asmsnmp' if (oem_db_name is not defined ) else 'ASMSNMP' }}"
+    ASM_USERNAME: "asmsnmp"
+    ASM_USERNAME_SECRET_KEY: "{{ 'asmsnmp' if (oem_db_name is not defined ) else 'ASMSNMP' }}"
