Add in the Audit Replication Management Role

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -160,6 +160,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/oracle_ha
             playbooks/alfresco_wallet
+            playbooks/oracle_audit_replication_management
             playbooks/ansible.cfg
             common
           path: operations
@@ -247,6 +248,8 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          ln -s $PWD/operations/playbooks/oracle_audit_replication_management/oracle_audit_replication_management $PWD/operations/playbooks/oracle_password_rotation/roles/oracle_audit_replication_management
+          ls -lrt $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
           -e target_environment_name=${{ steps.definetargets.outputs.TargetEnvironment }} ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
