--- a/helm/migrate-db/templates/job.yaml
+++ b/helm/migrate-db/templates/job.yaml
@@ -67,22 +67,22 @@ spec:
             - name: DST_DB_NAME
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.appName }}-rds-instance-output
+                  name: "{{ .Values.appName }}-rds-instance-output"
                   key: DATABASE_NAME
             - name: DST_DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.appName }}-rds-instance-output
+                  name: "{{ .Values.appName }}-rds-instance-output"
                   key: DATABASE_USERNAME
             - name: DST_DB_PASS
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.appName }}-rds-instance-output
+                  name: "{{ .Values.appName }}-rds-instance-output"
                   key: DATABASE_PASSWORD
             - name: DST_DB_HOST
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.appName }}-rds-instance-output
+                  name: "{{ .Values.appName }}-rds-instance-output"
                   key: RDS_INSTANCE_ADDRESS
           volumeMounts:
             - name: migrate-db-script
