--- a/.github/workflows/db-migration.yml
+++ b/.github/workflows/db-migration.yml
@@ -3,12 +3,18 @@ name: "Delius Core: GDPR/Merge Database Migration"
 on:
   workflow_dispatch:
     inputs:
-      environment:
+      env_source:
         description: "Environment where db migration will be done (delius-mis-dev)"
         required: true
         type: choice
         options:
           - delius-mis-dev
+      env_dest:
+        description: "Environment where db migration will be done (dev)"
+        required: true
+        type: choice
+        options:
+          - dev
       app:
         description: "Application DB to migrated ('gdpr' or 'merge')"
         required: true
@@ -22,25 +28,21 @@ on:
         type: string
 
 jobs:
-  db-migration:
-    name: Run RDS Migration
+  get-source-rds-creds:
+    name: Retrieve source RDS credentials (Legacy)
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment }}
-
+    environment: ${{ github.event.inputs.env_source }}
+    outputs:
+      db_user: ${{ steps.rds_creds.outputs.db_user }}
+      db_pass: ${{ steps.rds_creds.outputs.db_pass }}
+      db_name: ${{ steps.rds_creds.outputs.db_name }}
+      db_host: ${{ steps.rds_creds.outputs.db_host }}
     permissions:
       contents: read
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-db-migration-${{ github.run_number }}"
-          role-duration-seconds: 21600
-          aws-region: "eu-west-2"
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v4
@@ -51,14 +53,15 @@ jobs:
       - name: Setup helm
         uses: azure/setup-helm@v4
         with:
-          version: v3.14.0
+          version: v3.15.3
 
-      # Configure kubeconfig (assuming EKS)
-      - name: Update kubeconfig
-        run: |
-          aws eks update-kubeconfig \
-            --region eu-west-2 \
-            --name ${{ secrets.EKS_CLUSTER_NAME }}
+      - name: Configure AWS credentials (Legacy)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-db-migration-${{ github.run_number }}"
+          role-duration-seconds: 21600
+          aws-region: "eu-west-2"
 
       # Fetch DB credentials from SSM (legacy account)
       - name: Get RDS credentials from SSM
@@ -74,22 +77,39 @@ jobs:
           echo "db_name=$DB_NAME" >> $GITHUB_OUTPUT
           echo "db_host=$DB_HOST" >> $GITHUB_OUTPUT
 
-      # Create Kubernetes Secret for the job
+  get-dest-rds-creds:
+    name: Retrieve destination RDS credentials (CP)
+    runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.env_dest }}
+    needs: get-source-rds-creds
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Configure kubectl
+        run: |
+          echo "${{ secrets.KUBE_CERT }}" > ca.crt
+          kubectl config set-cluster ${KUBE_CLUSTER} --certificate-authority=./ca.crt --server=https://${KUBE_CLUSTER}
+          kubectl config set-credentials deploy-user --token=${{ secrets.KUBE_TOKEN }}
+          kubectl config set-context ${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=deploy-user --namespace=hmpps-delius-core-${{ github.event.inputs.destination_env }}
+          kubectl config use-context ${KUBE_CLUSTER}
+        env:
+          KUBE_CLUSTER: ${{ secrets.KUBE_CLUSTER }}
+
       - name: Create Kubernetes Secret
         run: |
-          kubectl delete secret legacy-rds-creds --ignore-not-found -n hmpps-delius-core-${{ github.event.inputs.environment }}
+          kubectl delete secret legacy-rds-creds --ignore-not-found -namespace hmpps-delius-core-${{ github.event.inputs.env_dest }}
           kubectl create secret generic legacy-rds-creds \
-            --from-literal=username=${{ steps.rds_creds.outputs.db_user }} \
-            --from-literal=password=${{ steps.rds_creds.outputs.db_pass }} \
-            --from-literal=database=${{ steps.rds_creds.outputs.db_name }} \
-            --from-literal=host=${{ steps.rds_creds.outputs.db_host }} \
-            -n ${{ github.event.inputs.environment }}
+            --from-literal=username=${{ needs.get-source-rds-creds.outputs.db_user }} \
+            --from-literal=password=${{ needs.get-source-rds-creds.outputs.db_pass }} \
+            --from-literal=database=${{ needs.get-source-rds-creds.outputs.db_name }} \
+            --from-literal=host=${{ needs.get-source-rds-creds.outputs.db_host }} \
+            -namespace hmpps-delius-core-${{ github.event.inputs.env_dest}}
 
-      # Install Helm chart for migration job
       - name: Deploy Migration Job via Helm
         run: |
-          helm upgrade --install db-migration ./jobs/migrate-db \
-            --namespace hmpps-delius-core-${{ github.event.inputs.environment }} \
+          helm upgrade --install db-migration ./helm/migrate-db \
+            --namespace hmpps-delius-core-${{ github.event.inputs.env_dest }} \
             --set appName=${{ github.event.inputs.app }} \
-            --set job.environment=${{ github.event.inputs.environment }} \
+            --set job.environment=${{ github.event.inputs.env_dest }} \
             --wait
