--- a/.github/workflows/db-migration.yml
+++ b/.github/workflows/db-migration.yml
@@ -97,8 +97,8 @@ jobs:
           echo "db_name=$DB_NAME" >> $GITHUB_OUTPUT
           echo "db_host=$DB_HOST" >> $GITHUB_OUTPUT
 
-  get-dest-rds-creds:
-    name: Dest RDS credentials (CP)
+  run-helm-job:
+    name: Run DB migartion Helm job (CP)
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.env_dest }}
     needs: get-source-rds-creds
@@ -118,13 +118,13 @@ jobs:
 
       - name: Create Kubernetes Secret
         run: |
-          kubectl delete secret legacy-rds-creds --ignore-not-found -namespace=hmpps-delius-core-${{ github.event.inputs.env_dest }}
+          kubectl delete secret legacy-rds-creds --ignore-not-found --namespace=hmpps-delius-core-${{ github.event.inputs.env_dest }}
           kubectl create secret generic legacy-rds-creds \
             --from-literal=username=${{ needs.get-source-rds-creds.outputs.db_user }} \
             --from-literal=password=${{ needs.get-source-rds-creds.outputs.db_pass }} \
             --from-literal=database=${{ needs.get-source-rds-creds.outputs.db_name }} \
             --from-literal=host=${{ needs.get-source-rds-creds.outputs.db_host }} \
-            -namespace=hmpps-delius-core-${{ github.event.inputs.env_dest}}
+            --namespace=hmpps-delius-core-${{ github.event.inputs.env_dest}}
 
       - name: Deploy Migration Job via Helm
         run: |
