--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/test_dms_endpoints.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/test_dms_endpoints.yml
@@ -1,9 +1,19 @@
+
+# After changing the password AWS will attempt to test the Endpoints automatically so
+# a test may already be in progress when we get here - ignore any error related to this,
+# otherwise start a new test so we can wait for the status to be updated in a timely 
+# manner
 - name: Start Test of DMS Endpoint {{ endpoint_arn }}
   shell: |
     aws dms test-connection --endpoint-arn {{ endpoint_arn }} \
      --region {{ region }} --replication-instance-arn {{ replication_instance_arn }}
   delegate_to: localhost
   become: no
+  changed_when: false
+  register: test_connection
+  failed_when:
+     - test_connection.rc != 0
+     - not test_connection.stderr is search('.*Connection is already being tested.*')
 
 - name: Poll connection status until successful or failed for {{ endpoint_arn }}
   ansible.builtin.command: >
