--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/test_dms_endpoints.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/test_dms_endpoints.yml
@@ -24,9 +24,11 @@
     --output text
   register: dms_conn_status
   changed_when: false
-  retries: 24
+  retries: 60
   delay: 10
   until: dms_conn_status.stdout | trim in ['successful', 'failed']
+  delegate_to: localhost
+  become: no
 
 - name: Fail if {{ endpoint_identifier }} did not pass
   ansible.builtin.fail:
